[package]
name = "roguelikefontviewer"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.9.1"
bevy_ascii_terminal = "0.12.3"
bevy_asset_loader = {version="0.14.1", features=["2d", "stageless", "standard_dynamic_assets"]}
bevy_ecs_tilemap = { version = "0.9", features = ["atlas"] }
iyes_loopless = "0.9.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

